<resources>
    <string name="app_name">DataBase</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up">Sign up</string>
    <string name="play">Play</string>
    <string name="button_to_sign_up">If it is your first time SIGN UP</string>

    <string name="map">Map</string>
    <string name="exit">Exit</string>
    <string name="switch_user">Switch user</string>

    <string name="save_life">You have no more lives. Answer this question \n or you will go \n back to Level 1 \&#8230; </string>
    <string name="tap_to_continue">Tap to continue</string>

    <string name="letter_title">HOGWARTS SCHOOL of WITCHCRAFT and WIZARDRY</string>
    <string name="letter_names">Headmaster: Albus Dumbledore\n
        (Order of Merlin, First Class, Grand Sorc., Chf.Warlock, Supreme Mugwump, International Confed. of Wizards)</string>
    <string name="letter_subject">We are pleased to inform you that you have been accepted at Hogwarts School of Witchcraft and Wizardry.\n\n
          Please tap to continue.\n\n
          Your sincerely,</string>


    <string name="hogwarts_letter">HOGWARTS SCHOOL of WITCHCRAFT and WIZARDRY \n Headmaster: Albus Dumbledore\n
        (Order of Merlin, First Class, Grand Sorc., Chf.Warlock, Supreme Mugwump, International Confed. of Wizards)\n\n
        Dear %s\n
          We are pleased to inform you that you have been accepted at Hogwarts School of Witchcraft and Wizardry.\n\n
          Please tap to continue.\n\n
          Your sincerely,
    </string>
    <string name="minerva_signature">Minerva McGonagall</string>


    <string name="logical_question_answer">answer</string>

    <string name="lost_life_text">You lost a life</string>

    <string name="continue_text">Continue</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
