<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/movie_thing"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:hint="@string/email"
                    android:textColor="@color/colorPrimaryDark"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/colorQuestion" />


                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@color/colorPrimary"
                    android:hint="@string/username"
                    android:textColorHint="@color/colorQuestion" />


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:hint="@string/password"
                    android:textColor="@color/colorPrimaryDark"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorQuestion" />

                <EditText
                    android:id="@+id/repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@color/colorPrimary"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorQuestion" />

                <Button
                    android:id="@+id/sing_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:text="@string/sign_up" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

